# Create pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "office-optimizer-pro"
version = "5.2.0"
description = "Professional tool to compress PowerPoint, Word, and Excel files"
readme = "README.md"
authors = [
    {name = "Shilezi", email = ""}
]
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "Topic :: System :: Archiving :: Compression",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.8"
dependencies = [
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "imageio>=2.31.0"
]

[project.optional-dependencies]
windows = ["pywin32>=306"]

[project.urls]
Repository = "https://github.com/shilezi/office-optimizer-pro"
Homepage = "https://github.com/shilezi/office-optimizer-pro"
